; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax.c_IOSUHAX_FSA_RawOpen.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax.c_IOSUHAX_FSA_RawOpen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@iosuhaxHandle = common dso_local global i64 0, align 8
@IOCTL_FSA_RAW_OPEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IOSUHAX_FSA_RawOpen(i32 %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca [2 x i32], align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %13 = load i64, i64* @iosuhaxHandle, align 8
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load i64, i64* @iosuhaxHandle, align 8
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %4, align 4
  br label %77

18:                                               ; preds = %3
  %19 = load i8*, i8** %6, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %25, label %21

21:                                               ; preds = %18
  %22 = load i32*, i32** %7, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %21
  store i32 -1, i32* %4, align 4
  br label %77

25:                                               ; preds = %21, %18
  store i32 2, i32* %8, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @strlen(i8* %26)
  %28 = sext i32 %27 to i64
  %29 = add i64 8, %28
  %30 = add i64 %29, 1
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %9, align 4
  %32 = load i32, i32* %9, align 4
  %33 = call i64 @memalign(i32 32, i32 %32)
  %34 = inttoptr i64 %33 to i32*
  store i32* %34, i32** %10, align 8
  %35 = load i32*, i32** %10, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %38, label %37

37:                                               ; preds = %25
  store i32 -2, i32* %4, align 4
  br label %77

38:                                               ; preds = %25
  %39 = load i32, i32* %5, align 4
  %40 = load i32*, i32** %10, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 0
  store i32 %39, i32* %41, align 4
  %42 = load i32*, i32** %10, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 1
  store i32 8, i32* %43, align 4
  %44 = load i32*, i32** %10, align 8
  %45 = bitcast i32* %44 to i8*
  %46 = load i32*, i32** %10, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 1
  %48 = load i32, i32* %47, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i8, i8* %45, i64 %49
  %51 = load i8*, i8** %6, align 8
  %52 = call i32 @strcpy(i8* %50, i8* %51)
  %53 = load i64, i64* @iosuhaxHandle, align 8
  %54 = load i32, i32* @IOCTL_FSA_RAW_OPEN, align 4
  %55 = load i32*, i32** %10, align 8
  %56 = load i32, i32* %9, align 4
  %57 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 0
  %58 = call i32 @IOS_Ioctl(i64 %53, i32 %54, i32* %55, i32 %56, i32* %57, i32 8)
  store i32 %58, i32* %12, align 4
  %59 = load i32, i32* %12, align 4
  %60 = icmp slt i32 %59, 0
  br i1 %60, label %61, label %65

61:                                               ; preds = %38
  %62 = load i32*, i32** %10, align 8
  %63 = call i32 @free(i32* %62)
  %64 = load i32, i32* %12, align 4
  store i32 %64, i32* %4, align 4
  br label %77

65:                                               ; preds = %38
  %66 = load i32*, i32** %7, align 8
  %67 = icmp ne i32* %66, null
  br i1 %67, label %68, label %72

68:                                               ; preds = %65
  %69 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 1
  %70 = load i32, i32* %69, align 4
  %71 = load i32*, i32** %7, align 8
  store i32 %70, i32* %71, align 4
  br label %72

72:                                               ; preds = %68, %65
  %73 = load i32*, i32** %10, align 8
  %74 = call i32 @free(i32* %73)
  %75 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 0
  %76 = load i32, i32* %75, align 4
  store i32 %76, i32* %4, align 4
  br label %77

77:                                               ; preds = %72, %61, %37, %24, %15
  %78 = load i32, i32* %4, align 4
  ret i32 %78
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @memalign(i32, i32) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @IOS_Ioctl(i64, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
